Loading ui was introduced

--- a/BitmartTest.ui
+++ b/BitmartTest.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>BitmartTest</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
@@ -24,10 +24,37 @@
        <bool>false</bool>
       </attribute>
      </widget>
-     <widget class="QListView" name="imagesView">
-      <property name="resizeMode">
-       <enum>QListView::Adjust</enum>
-      </property>
+     <widget class="QWidget" name="">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QListView" name="imagesView">
+         <property name="resizeMode">
+          <enum>QListView::Adjust</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="loadingLabel">
+           <property name="text">
+            <string>Loading...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QProgressBar" name="progressBar">
+           <property name="value">
+            <number>24</number>
+           </property>
+           <property name="textVisible">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
